WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81966
[BlackBerry] DeviceDPI Scaling is broken on mobile.
https://bugs.webkit.org/show_bug.cgi?id=81966
Summary
[BlackBerry] DeviceDPI Scaling is broken on mobile.
Mike Lattanzio
Reported
2012-03-22 14:28:28 PDT
We are not correctly handling viewport meta arguments for mobile devices.
Attachments
Patch
(2.35 KB, patch)
2012-03-22 14:42 PDT
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
Patch
(2.36 KB, patch)
2012-03-22 14:48 PDT
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
Patch
(2.31 KB, patch)
2012-03-22 15:06 PDT
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mike Lattanzio
Comment 1
2012-03-22 14:42:48 PDT
Created
attachment 133349
[details]
Patch
Rob Buis
Comment 2
2012-03-22 14:46:21 PDT
Comment on
attachment 133349
[details]
Patch Reviewed by seems wrong, no indentation, this will ikely not automate.
Mike Lattanzio
Comment 3
2012-03-22 14:48:27 PDT
Created
attachment 133352
[details]
Patch
Rob Buis
Comment 4
2012-03-22 14:49:21 PDT
Comment on
attachment 133352
[details]
Patch Looks good.
WebKit Review Bot
Comment 5
2012-03-22 14:53:19 PDT
Comment on
attachment 133352
[details]
Patch Rejecting
attachment 133352
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Konrad Piascik found in /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12113262
Mike Lattanzio
Comment 6
2012-03-22 15:06:02 PDT
Created
attachment 133356
[details]
Patch
Rob Buis
Comment 7
2012-03-22 15:06:53 PDT
Comment on
attachment 133356
[details]
Patch Another try.
WebKit Review Bot
Comment 8
2012-03-22 15:33:10 PDT
Comment on
attachment 133356
[details]
Patch Clearing flags on attachment: 133356 Committed
r111774
: <
http://trac.webkit.org/changeset/111774
>
WebKit Review Bot
Comment 9
2012-03-22 15:33:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug