[BlackBerry] DeviceDPI Scaling is broken on mobile. https://bugs.webkit.org/show_bug.cgi?id=81966

Fix our viewport argument handling to only override the
targetDensityDpi on tablet devices. Allow WebCore to use
dpi scaling for smaller screen mobile devices.

Patch by Mike Lattanzio <mlattanzio@rim.com> on 2012-03-22
Reviewed by Rob Buis.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::recomputeVirtualViewportFromViewportArguments):

Canonical link: https://commits.webkit.org/99262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111774 268f45cc-cd09-0410-ab3c-d52691b4dbfc